--- a/Nivel1/nivel1.html
+++ b/Nivel1/nivel1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +9,14 @@
     <link href="sass/nivel1.css" rel="stylesheet">
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </head>
+
 <body>
     <nav class="navbar fixed-top navbar-expand-md navbar-light mt-3">
         <div class="container">
-            <a class="navbar-brand active" aria-current="page" href="#"><img src="./img/logo-bookmark.svg" alt="Bookmark Logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand active" aria-current="page" href="#"><img src="./img/logo-bookmark.svg"
+                    alt="Bookmark Logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+                aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
@@ -20,7 +24,7 @@
                     <a class="nav-link me-3" href="#">FEATURES</a>
                     <a class="nav-link" href="#">PRICING</a>
                     <a class="nav-link mx-3" href="#">CONTACT</a>
-                    <button type="button" class="btn btn-danger ms-1">LOGIN</button>
+                    <button type="button" class="btn btn-secondary ms-1">LOGIN</button>
                 </div>
             </div>
         </div>
@@ -29,7 +33,8 @@
         <div class="row">
             <div class="col">
                 <h1>A Simple Bookmark Manager</h1>
-                <p>A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
+                <p>A clean and simple interface to organize your favourite websites. Open a new browser tab and see your
+                    sites load instantly. Try it for free.</p>
                 <button type="button" class="btn btn-primary">Get it on Chrome</button>
                 <button type="button" class="btn btn-light">Get it on Firefox</button>
             </div>
@@ -38,5 +43,54 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-4 text-center">
+                <h3>Features</h3>
+                <p>Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync
+                    between your devices so you can access them on the go.</p>
+            </div>
+        </div>
+        <div class="row justify-content-center mb-5">
+            <div class="col-8">
+                <nav>
+                    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                        <button class="nav-link active" id="nav-bookmarking-tab" data-bs-toggle="tab"
+                            data-bs-target="#nav-bookmarking" type="button" role="tab" aria-controls="nav-bookmarking"
+                            aria-selected="true">Simple Bookmarking</button>
+                        <button class="nav-link" id="nav-searching-tab" data-bs-toggle="tab" data-bs-target="#nav-searching"
+                            type="button" role="tab" aria-controls="nav-searching" aria-selected="false">Speedy
+                            Searching</button>
+                        <button class="nav-link" id="nav-sharing-tab" data-bs-toggle="tab" data-bs-target="#nav-sharing"
+                            type="button" role="tab" aria-controls="nav-sharing" aria-selected="false">Easy
+                            Sharing</button>
+                    </div>
+                </nav>
+            </div>
+        </div>
+        <div class="row">
+            <div class="tab-content" id="nav-tabContent">
+                <div class="tab-pane fade show active" id="nav-bookmarking" role="tabpanel" aria-labelledby="nav-bookmarking-tab">
+                    <img src="./img/illustration-features-tab-1.svg" alt="Features Tab1">
+                    <h3>Bookmark in one click</h3>
+                    <p>Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourites sites.</p>
+                    <button type="button" class="btn btn-primary">More info</button>
+                </div>
+                <div class="tab-pane fade" id="nav-searching" role="tabpanel" aria-labelledby="nav-searching-tab">
+                    <img src="./img/illustration-features-tab-2.svg" alt="Features Tab2">
+                    <h3>Bookmark in one click</h3>
+                    <p>Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourites sites.</p>
+                    <button type="button" class="btn btn-primary">More info</button>
+                </div>
+                <div class="tab-pane fade" id="nav-sharing" role="tabpanel" aria-labelledby="nav-sharing-tab">
+                    <img src="./img/illustration-features-tab-3.svg" alt="Features Tab3">
+                    <h3>Bookmark in one click</h3>
+                    <p>Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourites sites.</p>
+                    <button type="button" class="btn btn-primary">More info</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
