--- a/Nivel1/nivel1.html
+++ b/Nivel1/nivel1.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav class="navbar fixed-top navbar-expand-md navbar-light mt-3">
+    <nav class="navbar fixed-top navbar-expand-md navbar-light bg-white pt-3">
         <div class="container">
             <a class="navbar-brand active" aria-current="page" href="#"><img src="./img/logo-bookmark.svg"
                     alt="Bookmark Logo"></a>
@@ -33,8 +33,7 @@
         <div class="row">
             <div class="col">
                 <h1>A Simple Bookmark Manager</h1>
-                <p>A clean and simple interface to organize your favourite websites. Open a new browser tab and see your
-                    sites load instantly. Try it for free.</p>
+                <p>A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
                 <button type="button" class="btn btn-primary">Get it on Chrome</button>
                 <button type="button" class="btn btn-light">Get it on Firefox</button>
             </div>
@@ -47,8 +46,7 @@
         <div class="row justify-content-center">
             <div class="col-4 text-center">
                 <h3>Features</h3>
-                <p>Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync
-                    between your devices so you can access them on the go.</p>
+                <p>Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
             </div>
         </div>
         <div class="row justify-content-center mb-5">
@@ -91,6 +89,146 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-4 text-center">
+                <h3>Download the extension</h3>
+                <p>We've got more browsers in the pipeline. Please do let us know if you've got a favourite you'd like us to prioritize.</p>
+            </div>
+        </div>
+        <div class="row justify-content-center" style="height:350px;">
+            <div class="col-3 align-self-start">
+                <div class="card text-center">
+                    <img src="./img/logo-chrome.svg" class="mx-auto pt-4 pb-1" alt="Chrome Logo">
+                    <div class="card-body">
+                        <h5 class="card-title">Add to Chrome</h5>
+                        <p class="card-text">Minimum version 62</p>
+                    </div>
+                    <img src="./img/bg-dots.svg" alt="Dots" class="mx-auto">
+                    <div class="card-body">
+                        <a href="#" class="btn btn-primary">Add & Install Extension</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3 align-self-center">
+                <div class="card text-center">
+                    <img src="./img/logo-firefox.svg" class="mx-auto pt-4 pb-1" alt="Firefox Logo">
+                    <div class="card-body">
+                        <h5 class="card-title">Add to Firefox</h5>
+                        <p class="card-text">Minimum version 55</p>
+                    </div>
+                    <img src="./img/bg-dots.svg" alt="Dots" class="mx-auto">
+                    <div class="card-body">
+                        <a href="#" class="btn btn-primary">Add & Install Extension</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3 align-self-end">
+                <div class="card text-center">
+                    <img src="./img/logo-opera.svg" class="mx-auto pt-4 pb-1" alt="Opera Logo">
+                    <div class="card-body">
+                        <h5 class="card-title">Add to Opera</h5>
+                        <p class="card-text">Minimum version 46</p>
+                    </div>
+                    <img src="./img/bg-dots.svg" alt="Dots" class="mx-auto">
+                    <div class="card-body">
+                        <a href="#" class="btn btn-primary">Add & Install Extension</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-5 text-center">
+                <h3>Frequently Asked Questions</h3>
+                <p>Here are some of our FAQs. If you have any other questions you'd like answered please feel free to email us.</p>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-6 accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        What is Bookmark?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        How can I request a new browser?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        Is there a mobile app?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingFour">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                        What about other Chromium browsers?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-2">
+                <button type="button" class="btn btn-primary">More info</button>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row justify-content-center bg-primary">
+            <div class="col-5 text-center">
+                <h6>35,000+ ALREADY JOINED </h6>
+                <h5>Stay up-to-date with what we're doing</h5>
+            </div>
+        </div>
+        <div class="row justify-content-center bg-primary">
+            <div class="col-3">
+                <form>
+                    <div>
+                        <label for="inputEmail" class="form-label"></label>
+                        <input type="email" class="form-control" id="inputEmail" placeholder="Enter your email address">
+                    </div>
+                    <button type="submit" class="btn btn-secondary">Contact Us</button>
+                </form>
+            </div>
+        </div>
+        <div class="row">
+            <nav class="col navbar navbar-expand-lg navbar-light" style="background-color:#242946;">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img src="./img/logo-bookmark.svg" alt="Bookmark Logo"></a>
+                        <div class="navbar-nav">
+                        <a class="nav-link text-light" href="#">FEATURES</a>
+                        <a class="nav-link text-light" href="#">PRICING</a>
+                        <a class="nav-link text-light active" aria-current="page" href="#">CONTACT</a>
+                        </div>
+                    <div>
+                    <a href="#"><img src="./img/icon-facebook.svg" alt="Facebook Icon"></a>
+                    <a href="#"><img src="./img/icon-twitter.svg" alt="Twitter Icon"></a>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </div>
 </body>
-
 </html>
