--- a/Nivel1/nivel1.html
+++ b/Nivel1/nivel1.html
@@ -22,14 +22,14 @@
                         <a class="navbar-brand" href="#"><img src="./img/logo-bookmark-reversed.svg" alt="Bookmark Logo"></a>
                         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
-                    <div class="offcanvas-body justify-content-end">
+                    <div class="offcanvas-body justify-content-end position-relative">
                         <div class="navbar-nav">
                             <a class="nav-link me-md-2" href="#features">FEATURES</a>
                             <a class="nav-link mx-md-2" href="#">PRICING</a>
                             <a class="nav-link ms-md-2 me-md-3" href="#contact">CONTACT</a>
                             <button type="button" class="btn btn-secondary px-md-4 mx-md-2">LOGIN</button>
                         </div>
-                        <div class="social d-md-none">
+                        <div class="social d-md-none position-absolute bottom-0 start-50 translate-middle-x pb-3">
                             <a class="pe-4" href="#"><img src="./img/icon-facebook.svg" alt="Facebook Icon"></a>
                             <a class="ps-4" href="#"><img src="./img/icon-twitter.svg" alt="Twitter Icon"></a>
                         </div>
@@ -45,7 +45,7 @@
                         <h1 class="fw-bold">A Simple Bookmark Manager</h1>
                         <p class="py-2 py-md-2">A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
                         <button type="button" class="btn btn-primary btn-sm me-1 px-md-3 me-md-2">Get it on Chrome</button>
-                        <button type="button" class="btn btn-light btn-sm px-md-3">Get it on Firefox</button>
+                        <button type="button" class="btn btn-light btn-sm px-md-3 text-dark">Get it on Firefox</button>
                     </div>
                     <div class="col back-illustration-hero order-0 order-md-1">
                         <img class="img-fluid" src="./img/illustration-hero.svg" alt="Hero Illustration">
