--- a/Nivel3/nivel3.html
+++ b/Nivel3/nivel3.html
@@ -251,17 +251,17 @@
 
         <nav class="navbar navbar-expand-md navbar-light footer-bg py-4">
             <div class="container-fluid justify-content-center justify-content-md-around">
-                <a class="col-12 col-md-auto navbar-brand text-center me-md-0" href="#"><img src="./img/logo-bookmark-white.svg" alt="Bookmark Logo"></a>
+                <a class="navbar-brand col-12 col-md-auto text-center me-md-0" href="#"><img src="./img/logo-bookmark-white.svg" alt="Bookmark Logo"></a>
                 
-                <div class="col-12 col-md-auto navbar-nav align-items-center">
+                <div class="navbar-nav col-12 col-md-auto align-items-center">
                     <div class="nav-item py-3 py-md-0">
-                        <a class="nav-link text-light" href="#features">FEATURES</a>
+                        <a class="nav-link" href="#features">FEATURES</a>
                     </div>
                     <div class="nav-item px-md-5">
-                        <a class="nav-link text-light" href="#">PRICING</a>
+                        <a class="nav-link" href="#">PRICING</a>
                     </div>
                     <div class="nav-item py-3 py-md-0">
-                        <a class="nav-link text-light" href="#contact">CONTACT</a>
+                        <a class="nav-link" href="#contact">CONTACT</a>
                     </div>
                 </div>
                 
