--- a/Nivel3/nivel3nthchild.html
+++ b/Nivel3/nivel3nthchild.html
@@ -117,7 +117,7 @@
 
         <section id="download">
             <div class="container mt-5">
-                <div class="row justify-content-center mb-3 mb-md-5 pb-md-3">
+                <div class="row justify-content-center mb-3 mb-md-5 ">
                     <div class="col-11 col-md-8 text-center">
                         <h3>Download the extension</h3>
                         <p>We've got more browsers in the pipeline. Please do let us know if you've got a favourite you'd like us to prioritize.</p>
@@ -133,7 +133,7 @@
                             </div>
                             <img src="./img/bg-dots.svg" alt="Dots" class="img-fluid">
                             <div class="card-body">
-                                <a href="#" class="btn btn-primary py-2 px-md-4 my-md-1 px-lg-2 my-lg-0">Add & Install Extension</a>
+                                <a href="#" class="btn btn-primary py-2 px-md-2 my-md-1 px-lg-2 my-lg-0">Add & Install Extension</a>
                             </div>
                         </div>
                     </div>
@@ -146,7 +146,7 @@
                             </div>
                             <img src="./img/bg-dots.svg" alt="Dots" class="img-fluid">
                             <div class="card-body">
-                                <a href="#" class="btn btn-primary py-2 px-md-4 my-md-1 px-lg-2 my-lg-0">Add & Install Extension</a>
+                                <a href="#" class="btn btn-primary py-2 px-md-2 my-md-1 px-lg-2 my-lg-0">Add & Install Extension</a>
                             </div>
                         </div>
                     </div>
@@ -159,7 +159,7 @@
                             </div>
                             <img src="./img/bg-dots.svg" alt="Dots" class="img-fluid">
                             <div class="card-body">
-                                <a href="#" class="btn btn-primary py-2 px-md-4 my-md-1 px-lg-2 my-lg-0">Add & Install Extension</a>
+                                <a href="#" class="btn btn-primary py-2 px-md-2 my-md-1 px-lg-2 my-lg-0">Add & Install Extension</a>
                             </div>
                         </div>
                     </div>
